# deployment-lab

./: CLAUDE.md  DEPLOYMENT_GUIDE.md  README.md  keep-alive.sh  logs.sh  monitor.sh  next.config.ts  package-lock.json  package.json  requirements.md  start.sh  status.sh  stop.sh  watch-api.sh  watch-requests.sh
api/: main.py  pyproject.toml
api/app/: auth.py  deployments.py
api/models/: __init__.py  database.py  schemas.py
api/services/: __init__.py  cleanup_service.py  cloudflare_service.py  docker_service.py  nginx_service.py  port_service.py
api/utils/: auth.py
app/: globals.css  layout.tsx
app/components/: CreateDeploymentDialog.tsx  DeploymentCard.tsx  ProtectedRoute.tsx
app/components/ui/: badge.tsx  input.tsx  toast.tsx
app/dashboard/: page.tsx
app/deployments/[id]/logs/: page.tsx
app/hooks/: use-toast.tsx  useAuth.tsx
app/lib/: api.ts
app/login/: page.tsx
