[project]
name = "deployment-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "Abdullah Othman"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "docker>=6.0.0",
    "pydantic>=2.0.0",
    "motor>=3.0.0",
    "pymongo>=4.0.0",
    "aiofiles",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "httpx",
    "cloudflare",
    "gitpython",
    "jinja2",
    "python-dotenv",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
name = "deployment-lab"
version = "0.1.0"
description = ""
authors = ["Abdullah Othman"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.100.0"
uvicorn = ">=0.20.0"
docker = ">=6.0.0"
pydantic = ">=2.0.0"
motor = ">=3.0.0"
pymongo = ">=4.0.0"
aiofiles = "*"
python-jose = {extras = ["cryptography"], version = "*"}
passlib = {extras = ["bcrypt"], version = "*"}
python-multipart = "*"
httpx = "*"
cloudflare = "*"
gitpython = "*"
jinja2 = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
